feat: 初リリース

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -112,3 +112,8 @@ enabled = true
 # [[vectorize]]
 # binding = "MY_INDEX"
 # index_name = "my-index"
+
+# Workers Site
+# 参考 https://developers.cloudflare.com/workers/configuration/sites/start-from-worker/
+[site]
+bucket = "./public"     # the directory with your static assets
