feat: 初リリース

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ compatibility_flags = ["nodejs_compat"]
 # カスタムドメイン
 # 参考 https://developers.cloudflare.com/workers/configuration/routing/custom-domains/
 routes = [
-  { pattern = "shop.example.com", custom_domain = true }
+  { pattern = "shu7-nihongo.com", custom_domain = true }
 ]
 
 # Workers Logs
